test/fixtures/errors/add-comment-loader.js
/** @type {import("../../../../").LoaderDefinition} */
module.exports = function (source) {
	return source + "// some comment";
};
